src/containers/Checkout/Checkout.module.css
.Content {
	display: flex;
	justify-content: space-between;
}

.TotalItems {
	font-size: 1.2em;
	margin-bottom: 10px;
}

.LeftCheck {
	width: 60%;
}

.LeftCheck h2 {
	display: flex;
	align-items: center;
}

.LeftCheck h2 svg {
	margin-left: 10px;
	width: 2em;
	height: 2em;
	fill: #ff6900;
}

.RightCheck {
	width: 40%;
	max-height: 155px;
	box-shadow: 5px 5px 10px #ccc;
	border-radius: 10px;
	padding: 10px 20px;
	display: flex;
	align-items: center;
	flex-direction: column;
	justify-content: space-around;
}

.RightCheck  h2 {
	margin: 0;
}

.RightCheck  h2 span {
	color: #d15700;
}

.RightCheck button {
	width: 100%;
}

.Btn {
	margin-top: 10px;
}


@media screen and (max-width: 900px) {

	.Content {
		flex-wrap: wrap;
	}

	.Checkout h1, .TotalItems {
		text-align: center;
	}

	.RightCheck {
		text-align: center;
	}

	.LeftCheck, .RightCheck {
		width: 100%;
		display: inline-block;
	}

}

@media screen and (max-width: 600px) {
	.Left {
		flex-direction: column;
		width: 100%;
	}

	.Right {
		width: 100%;
		justify-content: space-around;
		margin-top: 20px;
	}
}

